# intent-review

./: .gitignore  README.md
.codex-plugin/: plugin.json
docs/dogfood/: PROTOCOL.md
docs/research/: landscape.md
docs/reviews/: 260715-design-review-codex-response.md  260715-design-review.md
docs/specs/260715-intent-review/: design.md  requirements.md  spike-01-reviewer-runtime.md  tasks.md
engine/: pyproject.toml
engine/src/intent_review/: __init__.py  changes.py  cli.py  prompts.py  schema.py  snapshot.py  taskstore.py  verify.py
engine/src/intent_review/reviewers/: __init__.py  claude.py  codex.py
engine/tests/: test_changes.py  test_schema.py  test_taskstore.py  test_verify.py
