[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "intent-review"
version = "0.1.0"
description = "Independent plan and implementation review against the user's original intent."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
intent-review = "intent_review.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
